--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "bootstrap": "^4.6.0",
     "express": "^4.16.3",
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "react": "^17.0.1",
+    "react-bootstrap": "^1.5.1",
+    "react-router-dom": "^5.2.0"
   }
 }
