--- a/client/package.json
+++ b/client/package.json
@@ -4,9 +4,13 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-scripts": "^2.1.1"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-scripts": "^2.1.1",
+    "bootstrap": "^4.6.0",
+    "react-bootstrap": "^1.5.1",
+    "react-router-dom": "^5.2.0",
+    "react-transition-group": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
